--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+
+/* body {
+  font-family: "Playfair Display", serif;
+} */
 
 
 @layer base {
@@ -49,9 +50,10 @@ body {
     --main-lighter: rgba(156, 35, 48, .5);
     --second: #bda881;
     --red: #9c2330;
-    --font-main: 'Poppins';
+    /* --font-main:  "Playfair Display", serif;
     --font-headers: 'Barlow';
     --font-subheaders: 'Sacramento';
+    --font-roboto: "Roboto", sans-serif;  */
   }
 
   .dark {
